--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <title>Frontend Mentor | Bookmark landing page</title>
     <link rel="stylesheet" href="src/style.css" />
-    <script src="script.js" defer></script>
+    <script src="./script.js" defer></script>
   </head>
   <body class="flex flex-col justify-center items-center selection:bg-blue-400">
     <main
